# 5_tutorials

./: .directory  README.md
1 Latex/: AU Latex.odt
10 C++/: AU C++.odt
10 C++/7_codeblocks_examples/: .directory
10 C++/7_codeblocks_examples/5_basics/2_class/: .directory  class_header.h  test_class
10 C++/7_codeblocks_examples/5_basics/2_map/: test_map.cpp
10 C++/7_codeblocks_examples/5_basics/4_header_file/: .directory  CMakeLists.txt
10 C++/7_codeblocks_examples/5_basics/4_header_file/include/: .directory
10 C++/7_codeblocks_examples/5_basics/4_header_file/src/: functions.cpp  test.cpp
10 C++/7_codeblocks_examples/5_basics/7_int_array/: .directory  int_array  (+1 more)
10_cpp/: .directory  AU C++.odt
10_cpp/0_cmake/: run_make
10_cpp/0_cmake/0_basics/: CMakeLists.txt
10_cpp/0_cmake/0_basics/include/: functions.h
10_cpp/0_cmake/0_basics/src/: practicing_cpp.cpp
10_cpp/0_cmake/10_cmake_test/: CMakeLists.txt
10_cpp/0_cmake/1_pointer_reference/: CMakeLists.txt
10_cpp/0_cmake/1_test_libraty/: CMakeLists.txt  rerun_cmake
10_cpp/0_cmake/2_number_type/: CMakeLists.txt
10_cpp/0_cmake/2_number_type/src/: functions.cpp  number_type.cpp
10_cpp/0_cmake/2p1_number_rounding/: CMakeLists.txt
10_cpp/0_cmake/3_map/: CMakeLists.txt
10_cpp/0_cmake/4_p_1_shared_lib/: CMakeLists.txt  Readme.txt
10_cpp/0_cmake/4_p_1_shared_lib/include/: Student.h
10_cpp/0_cmake/4_p_1_shared_lib/src/: .directory  Student.cpp
10_cpp/0_cmake/5_array/: CMakeLists.txt
10_cpp/0_cmake/6_class/: CMakeLists.txt
10_cpp/0_cmake/7_function_overloading/: CMakeLists.txt
10_cpp/0_cmake/8_function_overriding/: CMakeLists.txt
10_cpp/7_codeblocks_examples/3_plain_round-off_error/: .directory  guard_digits  guard_digits.cpp  test_Mar2419  test_Mar2419.cpp
10_cpp/7_codeblocks_examples/5_basics/: .directory
11 gnuplot/: .directory  AU gnuplot.odt
12 github/: .directory  AU github.odt  ~$ github.odt
13 cmake/: .directory  AU cmake.odt
13 cmake/c++ make/: .directory  CMakeLists.txt
13 cmake/c++ make/src/: main.cpp
13_cmd/: AU_cmd.odt
14 text/: .directory  AU text.odt
14_text_editor/: AU_text_editor.odt
15 fenics/: .directory  AU fenics.odt
15_fenics/: AU fenics.odt
16 Python/: AU python.odt
16 Python/6_python_plotting/: .directory
16_python/: .directory  AU_python.odt
16_python/6_python_plotting/: b_spline_3.py
17 inkscape/: .directory  AU inkscape.odt
17_inkscape/: AU inkscape.odt
18 bash/: AU bash.odt
18_bash/: .directory  AU bash.odt
19 gmsh/: .directory  AU gmsh.odt
19 gmsh/2_custom_mesh/: .directory  exponential_geometry.geo  exponential_geometry.msh  rectangular_geometry.geo  rectangular_geometry.geo.opt  rectangular_geometry.msh  square_geometry.geo  square_geometry.msh  t1.msh  untitled.geo  wedge_example.geo  wedge_example.msh
1_Latex/: .directory  AU Latex.odt
2 Matlab/: .directory  AU Matlab.odt
20 computer science/: .directory  AU cs.odt  AU_CS.odt
2_Matlab/: AU_Matlab.odt
3 Libre office/: .directory  AU Libre.odt
4 Linux/: .directory  AU for Linux.odt
4_Linux/: AU_Linux.odt  AU_Linux_aug_11_2021.odt
5 deal.ii/: .directory  AU_dealii.odt
5_dealii/: AU_dealii.odt  AU_dealii_july_25_2021.odt
6 Maple/: .directory  Test cases for Maple  User's guide for Maple.odt
6 Maple/1D/: .directory
6 Maple/1D/1 Poisson problem/: .directory  solve_Poisson_equation.mw
6 Maple/1D/2 Diffusion problem/: .directory
6 Maple/1D/3 An example that the 2nd derivative is not integrable over 0/: .directory  example1.mw
6 Maple/2D/: .directory  pdsolve_numeric.mw
6 Maple/2D/1 Laplace euqation/: .directory  Lap_online_base.mw  Lap_online_tutorial.mw  Maple_Lap_self.mw
6 Maple/2D/2 Diffusion euqation/: .directory
6 Maple/2D/3 Heat equation/: .directory  HE_Periodic_BC.mw
6 Maple/2D/Laplace euqation/: Maple_Lap.mw
7 firefox/: .directory  AU firefox.odt  User's guide for firefox browser
7_excel/: AU excel.odt
8 Eclipse/: .directory  AU eclipse.odt
9 Visit/: AU visit.odt
9_visualizing_softwares/: .directory  AU_visualization_softwares.odt
(+28 files in other folders)
